--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -5,6 +5,7 @@
             <button class="sub-dropdown-btn">learned</button>
             <div class="sub-dropdown-content">
                 <a href="https://www.dicoding.com/users/xgilarb/academies" target="_blank">Dicoding</a>
+                <a href="https://roadmap.sh/u/xgilarb" target="_blank">Roadmap.sh</a>
                 <a href="https://www.cloudskillsboost.google/public_profiles/a9569001-6c56-4459-9e2f-05bc33107a93" target="_blank">Google Cloud</a>
             </div>
         </div>
@@ -73,6 +74,16 @@
                 <a href="https://kuresains.itch.io" target="_blank">Website</a>
                 <a href="https://x.com/kuresains" target="_blank">Kuresains X</a>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="dropdown-container">
+    <button class="dropdown-btn">Back</button>
+    <div class="dropdown-content">
+        <div class="sub-dropdown-container">
+            <!-- <button class="sub-dropdown-btn">learned</button> -->
+            <button class="sub-dropdown-btn" onclick="window.location.href='https://gillar.pages.dev';">terminal</button>
         </div>
     </div>
 </div>
