--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,21 +1,9 @@
 <div class="dropdown-container">
-    <button class="dropdown-btn">About</button>
-    <div class="dropdown-content">
-        <div class="sub-dropdown-container">
-            <button class="sub-dropdown-btn">learned</button>
-            <div class="sub-dropdown-content">
-                <a href="https://www.dicoding.com/users/xgilarb/academies" target="_blank">Dicoding</a>
-                <a href="https://roadmap.sh/u/xgilarb" target="_blank">Roadmap.sh</a>
-                <a href="https://www.cloudskillsboost.google/public_profiles/a9569001-6c56-4459-9e2f-05bc33107a93" target="_blank">Google Cloud</a>
-            </div>
-        </div>
-        <div class="sub-dropdown-container">
-            <button class="sub-dropdown-btn">Me</button>
-            <div class="sub-dropdown-content">
-                <a href="/me">myBio</a>
-                <a href="https://x.com/xgilarb" target="_blank">X</a>
-            </div>
-        </div>
+    <button class="dropdown-btn"  onclick="window.location.href='https://gillar.pages.dev';">Back</button>
+    <div class="dropdown-content"> 
+        <!-- <div class="sub-dropdown-container"> -->
+            <!-- <button class="sub-dropdown-btn" onclick="window.location.href='https://gillar.pages.dev';">terminal</button> -->
+        <!-- </div> -->
     </div>
 </div>
 
@@ -23,36 +11,25 @@
     <button class="dropdown-btn">Projects</button>
     <div class="dropdown-content">
         <div class="sub-dropdown-container">
-            <button class="sub-dropdown-btn">Webdevs</button>
+            <button class="sub-dropdown-btn">Webs</button>
             <div class="sub-dropdown-content">
                 <a href="https://github.com/xgilarb/xpscholarship" target="_blank">Scholars...</a>
-                <a href="/soon_for_now_404">他のウェブ</a>
-                <a href="/soon_for_now_404">他のツール</a>
                 <a href="/soon_for_now_404">APIs</a>
                 <a href="/soon_for_now_404">POS</a>
                 <a href="/soon_for_now_404">HelpDesk</a>
                 <a href="/soon_for_now_404">E-comme...</a>
                 <a href="/soon_for_now_404">DMS</a>
-                <a href="/soon_for_now_404">CRM</a>
-                <a href="/soon_for_now_404">HRIS</a>
-                <a href="/soon_for_now_404">HRMS</a>
-                <a href="/soon_for_now_404">IMS</a>
-                <a href="/soon_for_now_404">PMS</a>
-                <a href="/soon_for_now_404">LMS</a>
-                <a href="/soon_for_now_404">HCM</a>
                 <a href="/soon_for_now_404">Serverless</a>
                 <a href="/soon_for_now_404">RT-Apps</a>
                 <a href="/soon_for_now_404">Microserv...</a>
-                <a href="/soon_for_now_404">WMS</a>
-                <a href="/soon_for_now_404">SCM</a>
-                <a href="/soon_for_now_404">ERP</a>
+                <a href="/soon_for_now_404">OtherTools</a>
             </div>
         </div>
         <div class="sub-dropdown-container">
-            <button class="sub-dropdown-btn">Gamedevs</button>
+            <button class="sub-dropdown-btn">ML</button>
             <div class="sub-dropdown-content">
-                <a href="/soon_for_now_404">Milesoff</a>
-                <a href="/soon_for_now_404">Citynowhere</a>
+                <a href="/soon_for_now_404">Untara</a>
+                <a href="/soon_for_now_404">Kantara</a>
             </div>
         </div>
     </div>
@@ -79,11 +56,22 @@
 </div>
 
 <div class="dropdown-container">
-    <button class="dropdown-btn">Back</button>
+    <button class="dropdown-btn">About</button>
     <div class="dropdown-content">
         <div class="sub-dropdown-container">
-            <!-- <button class="sub-dropdown-btn">learned</button> -->
-            <button class="sub-dropdown-btn" onclick="window.location.href='https://gillar.pages.dev';">terminal</button>
+            <button class="sub-dropdown-btn">Validate mySkills</button>
+            <div class="sub-dropdown-content">
+                <a href="https://www.dicoding.com/users/xgilarb/academies" target="_blank">Dicoding</a>
+                <a href="https://roadmap.sh/u/xgilarb" target="_blank">Roadmap.sh</a>
+                <a href="https://www.cloudskillsboost.google/public_profiles/a9569001-6c56-4459-9e2f-05bc33107a93" target="_blank">Google Cloud</a>
+            </div>
+        </div>
+        <div class="sub-dropdown-container">
+            <button class="sub-dropdown-btn">Me</button>
+            <div class="sub-dropdown-content">
+                <a href="/me">myBio</a>
+                <a href="https://x.com/xgilarb" target="_blank">X</a>
+            </div>
         </div>
     </div>
 </div>
